syntax = "proto3";
package com.black.sim.protobuf;
message ProtoMsg {

    /*消息类型枚举*/
    enum HeadType {
        // 登陆请求
        LOGIN_REQUEST = 0;
        // 登录响应
        LOGIN_RESPONSE = 1;
        // 退出请求
        LOGOUT_REQUEST = 2;
        // 登出响应
        LOGOUT_RESPONSE = 3;
        // 心跳请求
        KEEPALIVE_REQUEST = 4;
        // 心跳响应
        KEEPALIVE_RESPONSE = 5;
        // 聊天消息请求
        MESSAGE_REQUEST = 6;
        // 聊天消息响应
        MESSAGE_RESPONSE = 7;
        // 服务器通知
        MESSAGE_NOTIFICATION = 8;
    }

    /*登录请求*/
    message LoginRequest {
        // 用户唯一id
        string uid = 1;
        // 设备id
        string deviceId = 2;
        // token
        string token = 3;
        // 客户平台
        uint32 platform = 4;
        // 版本号
        string app_version = 5;
        // json (其它信息 比如账号密码等)
        string json = 6;
    }

    /*登录响应*/
    message LoginResponse {
        bool result = 1;
        uint32 code = 2;
        string info = 3;
        uint32 expose = 4;
    }

    /*消息请求*/
    message MessageRequest {
        // 消息id
        uint64 msg_id = 1;
        // 来自用户的唯一标识
        string from = 2;
        // 发送对象
        string to = 3;
        // 时间
        uint64 time = 4;
        // 消息类型
        uint32 msg_type = 5;
        // 内容
        string content = 6;
        // 链接
        string url = 8;
        string property = 9;
        // 昵称
        string from_nick = 10;
        string json = 11;
    }

    /*消息响应*/
    message MessageResponse {
        // true代表成功 false代表失败
        bool result = 1;
        // 状态码
        uint32 code = 2;
        // 错误详情
        string info = 3;
        // 是否告知用户 0告知 1不告知
        uint32 expose = 4;
        // 是否为最后的应答
        bool last_block = 5;
        // 应答的序号
        fixed32 block_index = 6;
    }

    /*通知*/
    message MessageNotification {
        uint32 msg_type = 1;
        bytes sender = 2;
        string json = 3;
        string timestamp = 4;
    }

    /*心跳*/
    message MessageHeartBeat {
        uint32   seq = 1;
        string   uid = 2;
        string   json =3;
    }


    /*外层消息*/
    message DefaultMessage{
        // 消息类型
        HeadType type = 1;
        // 序列号
        uint64 sequence = 2;
        // 会话id
        string session_id = 3;
        // 登录请求
        LoginRequest loginRequest = 4;
        // 登录响应
        LoginResponse loginResponse = 5;
        // 聊天请求
        MessageRequest messageRequest = 6;
        // 聊天响应
        MessageResponse messageResponse = 7;
        // 通知消息
        MessageNotification notification = 8;
        // 心跳
        MessageHeartBeat heartBeat = 9;
    }


}
